--- a/projects/mogambo/dev/pod-with-pvc.yml
+++ b/projects/mogambo/dev/pod-with-pvc.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: myfrontend
-      image: schoolofdevops/nginx
+      image: microsudo/nginx
       volumeMounts:
       - mountPath: "/var/www/html"
         name: mypd
