--- a/projects/instavote/prod/vote-deploy.yaml
+++ b/projects/instavote/prod/vote-deploy.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: schoolofdevops/vote:v1
+          image: microsudo/vote:v1
           ports:
             - containerPort: 80
               protocol: TCP
