--- a/projects/instavote/prod/worker-deploy.yaml
+++ b/projects/instavote/prod/worker-deploy.yaml
@@ -24,4 +24,4 @@ spec:
     spec:
       containers:
         - name: app
-          image: schoolofdevops/vote-worker:latest
+          image: microsudo/vote-worker:latest
