--- a/projects/mogambo/dev/carts-deploy.yml
+++ b/projects/mogambo/dev/carts-deploy.yml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: carts
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: carts
-          image: schoolofdevops/carts
+          image: microsudo/carts
           imagePullPolicy: Always
           ports:
             - containerPort: 80
