--- a/projects/mogambo/dev/loadtest-deploy.yml
+++ b/projects/mogambo/dev/loadtest-deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: load-test
-          image: schoolofdevops/load-test:v1
+          image: microsudo/load-test:v1
           imagePullPolicy: Always
           command: ["/bin/sh"]
           args: ["-c", "while true; do locust --host http://front-end.instavote.svc.cluster.local -f /config/locustfile.py --clients 5 --hatch-rate 5 --num-request 10000 --no-web; done"]
