--- a/monitoring/heapster/grafana-dep.yml
+++ b/monitoring/heapster/grafana-dep.yml
@@ -31,7 +31,7 @@ spec:
           # The following env variables are required to make Grafana accessible via
           # the kubernetes api-server proxy. On production clusters, we recommend
           # removing these env variables, setup auth for grafana, and expose the grafana
-          # service using a LoadBalancer or a public IP.
+          # service using a LoadBalancer or a public IP
         - name: GF_AUTH_BASIC_ENABLED
           value: "false"
         - name: GF_AUTH_ANONYMOUS_ENABLED
