--- a/microcolor-k8s/pod-cm1.yml
+++ b/microcolor-k8s/pod-cm1.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: microcolor-pod
+  labels:
+    app: micro-color 
 spec:
   containers:
     - name: micro-color
@@ -10,4 +12,4 @@ spec:
         - containerPort: 8080
       envFrom:
         - configMapRef:
-          name: app-config 
+            name: app-config 
