--- a/microcolor-k8s/config-map.yml
+++ b/microcolor-k8s/config-map.yml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
-data: 
-  APP_COLOR: blue
+data: i
+  APP_COLOR: purple
   APP_MODE: prod
-
-  
